my commit message

--- a/static/stylesheet/style.css
+++ b/static/stylesheet/style.css
@@ -34,7 +34,7 @@ button {
     }
 
     .main-content {
-        top: 17%;
+        top: 160px;
         width: 55%;
     }
 
@@ -53,7 +53,7 @@ button {
     }
 
     .main-content {
-        top: 15%;
+        top: 130px;
         width: 85%;
     }
 
